--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -1,7 +1,3 @@
-:root{
-    --ringside-compressed: var(--ringside-compressed);
-    --ringside-narrow: var(--ringside-narrow);
-}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -59,6 +55,8 @@
         --chart-5: 27 87% 67%;
 
         --radius: 0.5rem;
+        --ringside-compressed: "ringside-compressed";
+        --ringside-narrow: "ringside-narrow";
     }
 
     .dark {
@@ -121,6 +119,13 @@
 
     body {
         @apply bg-background text-foreground;
-        font-family: var(--ringside-narrow);
     }
+}
+.title{
+    font-family: var(--ringside-compressed), serif;
+    font-size: 22px;
+}
+.sub-title{
+    font-family: var(--ringside-narrow), serif;
+    font-size: 17px;
 }
