--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,7 @@
+@use "components/index.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "components";
 
 @layer base {
     :root {
